--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,12 @@ button {
   font-size: 32px;
   margin-left: 25px;
 }
+
+#gameTitle {
+  color: white;
+  font-family: sans-serif;
+  font-size: 48px;
+  padding: 25px;
+  font-weight: bolder;
+  text-align: center;
+}
